# AlphaSeeker

./: .gitignore  README.md  pyproject.toml  requirements.txt  start.ps1  test.py
data/: watchlist.txt
docs/: capabilities.md  mvp_blueprint.md  ui_product_design.md
src/alphaseeker/: cli.py  config.py  models.py  preview_app.py  storage.py
src/alphaseeker/pipelines/: shadow_scan.py
src/alphaseeker/providers/: __init__.py  akshare_provider.py  baostock_provider.py  base.py  factory.py  mock_provider.py  yfinance_provider.py
src/alphaseeker/skills/: allocation.py  news_analysis.py  ranker.py  scoring.py
