[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaseeker"
version = "0.1.0"
description = "Personal AI-assisted stock idea engine"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.8",
  "rich>=13.7",
  "openai>=1.60.0",
  "streamlit>=1.41.0",
  "akshare>=1.15.0",
  "yfinance>=0.2.54",
  "baostock>=0.8.9"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
